Service configuration, easy integration to ekeel (#3)
* feat:(api) entity token ...

* feat:(config) Service configuration, easy integration to tkeel
